// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toStartWith fails when string starts with given prefix 1`] = `
"expect(received).not.toStartWith(expected)

Expected string to not start with:
  \\"hello\\"
Received:
  \\"hello world\\""
`;

exports[`.toStartWith fails when string does not start with the given prefix 1`] = `
"expect(received).toStartWith(expected)

Expected string to start with:
  \\"world\\"
Received:
  \\"hello world\\""
`;

exports[`.toStartWith fails when the string is shorter than the given prefix 1`] = `
"expect(received).toStartWith(expected)

Expected string to start with:
  \\"hello world\\"
Received:
  \\"hello\\""
`;
